# ersap-vtp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.gradle  build.gradle.7.1.1  build.gradle.Clara  build.gradle.Ersap  build.gradle.SJ  build.gradle.WORKING  services.yaml  settings.gradle
data/: stream_1_1000.txt  stream_1_20.txt  stream_1_30.txt  stream_1_40.txt  stream_1_50.txt  stream_1_500.txt  stream_1_60.txt  stream_1_70.txt
gradle/wrapper/: gradle-wrapper.properties
src/libsrc/: Aggregator.h  ByteBuffer.cpp  ByteBuffer.h  ByteOrder.cpp  ByteOrder.h  ChargeTime.h  Consumer.h  EUtil.h  EvioException.h  FakeVtp.cpp  FakeVtp.h  Receiver.h  RingEvent.cpp  RingEvent.h  TwoStreamAggregator.cpp  TwoStreamAggregator.h  disruptorTrial.cpp  disruptorTrial.h
src/main/java/org/jlab/epsci/ersap/engine/: SAMPASourceEngine.java  VTPSourceEngine.java  VTPStreamTestEngine.java  VTPSyncEngine.java  VTPWriterEngine.java
src/main/java/org/jlab/epsci/ersap/engine/util/: StreamingDataTypes.java
src/main/java/org/jlab/epsci/ersap/sampa/: ELinkStats.java  SAggregator.java  SConsumer.java  SDecoder.java  SMPTwoStreamAggregatorDecoder.java  SReceiver.java  SRingRawEvent.java  SRingRawEventFactory.java  SampaDecoder.java  StreamProcessor.java
src/main/java/org/jlab/epsci/ersap/util/: EUtil.java
src/main/java/org/jlab/epsci/ersap/util/commons/: PayloadDecoderFactory.java  PayloadDecoderPool.java
src/main/java/org/jlab/epsci/ersap/util/disruptor/: PDFactory.java  PDPool.java
src/main/java/org/jlab/epsci/ersap/util/hitfinder/: AdcHit.java  ChargeTime.java  HitFinder.java  SlidingWindowStream.java
src/main/java/org/jlab/epsci/ersap/vtp/: AdcHit.java  AdcHit14.java  AdcHitMapBa.java  AdcHitMapEvent.java  Aggregator.java  ChargeTime.java  ChargeTime14.java  Consumer.java  EUtil.java  FourStreamAggregator.java  FtFhodoHipo.java  HitFinder.java  PayloadDecoder.java  PayloadDecoderFactory.java  Receiver.java  ReceiverTest.java  RingAdcHitEvent.java  RingAdcHitEventFactory.java  RingEvent.java  RingEventFactory.java  RingRawEvent.java  RingRawEventFactory.java  SlidingWindowStream.java  TwoStreamAggregator.java  VAdcHitMapBa.java  VAdcHitMapEvent.java  VAggregator.java  VConsumer.java  VPayloadDecoder.java  VReceiver.java  VReceiverTest.java  VRingRawEvent.java  VRingRawEventFactory.java  VTPSixStreamAggregator.java  VTPTwoStreamAggregatorDecoder.java
src/main/java/org/jlab/epsci/ersap/vtp/engines/: Vtp2Source.java
src/main/java/org/jlab/epsci/ersap/vtp/engines/format/: AdcDataFormat.java  PayloadDecoderProto.java
src/main/java/org/jlab/epsci/ersap/vtp/util/: ChargeTime.java  EUtil.java  HitFinder.java  ObjectPool.java
src/main/java/org/jlab/epsci/ersap/vtp/util/commons/: PayloadDecoderFactory.java  PayloadDecoderPool.java
src/main/java/org/jlab/epsci/ersap/vtp/util/disruptor/: PDFactory.java  PDPool.java
src/main/java/org/jlab/epsci/ersap/vtp/util/hitfinder/: AdcHit.java  ChargeTime.java  HitFinder.java  SlidingWindowStream.java
src/main/java/org/jlab/epsci/stream/engine/: SMPStreamTestEngine.java  SMPWriterEngine.java  SampaSourceEngine.java  VTP1SourceEngine.java  VTP2SourceEngine.java  VTPHistogram.java  VTPSourceEngine.java  VTPStreamTestEngine.java  VTPWriterEngine.java
src/main/java/org/jlab/epsci/stream/engine/evio/: AggFileReaderEngine.java  AggWriterEngine.java  EvioFadcDecoderEngine.java
src/main/java/org/jlab/epsci/stream/engine/util/: EvioDataType.java  JavaObjectType.java  O2BB2O.java  SampaDasType.java  SlotChannelCanvas.java  StreamingDataTypes.java
src/main/java/org/jlab/epsci/stream/sampa/: ELinkStats.java  SAggregator.java  SConsumer.java  SDasDecoder.java  SDecoder.java  SMPTwoStreamAggregatorDecoder.java  SReceiver.java  SRingRawEvent.java  SRingRawEventFactory.java  SampaDecoder.java  StreamProcessor.java
src/main/java/org/jlab/epsci/stream/sampaBB/: DasDecoder.java  DecoderType.java  DoubleDumper.java  DspDecoder.java  ELinkStats.java  ReceiveAndDumper.java  SAggregator.java  SConsumer.java  SMPTwoStreamAggregatorDecoder.java  SMPTwoStreamEngineAggregator.java  SReceiver.java  SRingRawEvent.java  SRingRawEventFactory.java  SampaDecoder.java  SampaType.java  StreamProcessor.java
src/main/java/org/jlab/epsci/stream/util/: EUtil.java  VRingBuffer.java
src/main/java/org/jlab/epsci/stream/util/commons/: ByteBufferPool.java  PayloadDecoderFactory.java  PayloadDecoderPool.java
src/main/java/org/jlab/epsci/stream/util/disruptor/: ByteBufferItem.java  ByteBufferSupply.java  PDFactory.java  PDPool.java
src/main/java/org/jlab/epsci/stream/util/hitfinder/: AdcHit.java  ChargeTime.java  HitFinder.java  SlidingWindowStream.java
src/main/java/org/jlab/epsci/stream/vtp/: BeamSearch.java  CodaSroToFile.java  CosmicSearch.java  Fadc2Hipo.java  FourStreamAggregator.java  FtFhodoHipo.java  HipoDrawBank.java  VAdcHit.java  VAdcHitMap.java  VAdcHitMapBa.java  VAdcHitMapEvent.java  VAggregator.java  VConsumer.java  VPayloadDecoder.java  VReceiver.java  VReceiverTest.java  VRingRawEvent.java  VRingRawEventFactory.java  VTPOneStreamReceiverDecoder.java  VTPSixStreamAggregator.java  VTPTwoStreamAggregatorDecoder.java
src/main/java/org/jlab/epsci/stream/vtp/engines/: Vtp2Source.java
src/main/java/org/jlab/epsci/stream/vtp/engines/format/: AdcDataFormat.java  AdcDataFormat.proto  PayloadDecoderProto.java
src/main/java/org/jlab/epsci/stream/vtp/evio/: AggFileOutputReader.java  CODA_SRO_Header.java  CodaSroToFile.java  LiveHistogram.java  ReadAggOutput.java  VtpFileReceiver.java
src/main/java/org/jlab/epsci/stream/vtp/test/: VReceiverTest.java
src/main/resources/org/jlab/epsci/stream/engine/: AggFileReaderEngine.yaml  SMPWriterEngine.yaml  SamaSourceEngine.yaml  VTPSourceEngine.yaml  VTPWriterEngine.yaml
src/main/resources/org/jlab/epsci/stream/engine/evio/: AggWriterEngine.yaml
